# finguard-ai

./: .gitignore  README.md  generate_diagrams.py  generate_thumbnail.py  main.py  mcp_config.json  pyproject.toml
.adk/: config.yaml
fin_guard_ai/: __init__.py  agent.py  mcp_server.py
fin_guard_ai/a2a/: __init__.py  notification_agent.py
fin_guard_ai/agents/: analyst_agent.py  budget_advisor_agent.py  finguard_agent.py  mcp_test_agent.py  merger_agent.py  parallel_financial_agent.py  parallel_pipeline_agent.py  testing_agent.py
fin_guard_ai/prompts/: analyst_prompt.txt  budget_advisor_prompt.txt  finguard_prompt.txt  merger_prompt.txt  prompt_loader.py
fin_guard_ai/resources/: Aug2025_Billedstatements_9014_21-12-25_15-43_transactions.csv  Aug2025_Billedstatements_9823_21-12-25_15-45_transactions.csv  Dec2025_Billedstatements_9014_21-12-25_15-44_transactions.csv  Dec2025_Billedstatements_9823_21-12-25_15-44_transactions.csv  Jul2025_Billedstatements_9823_21-12-25_15-45_transactions.csv  Jun2025_Billedstatements_9823_21-12-25_15-46_transactions.csv  Nov2025_Billedstatements_9014_21-12-25_15-44_transactions.csv  Nov2025_Billedstatements_9823_21-12-25_15-45_transactions.csv  Oct2025_Billedstatements_9014_21-12-25_15-44_transactions.csv  Oct2025_Billedstatements_9823_21-12-25_15-45_transactions.csv  Sep2025_Billedstatements_9014_21-12-25_15-43_transactions.csv  Sep2025_Billedstatements_9823_21-12-25_15-45_transactions.csv  all_transactions_merged.csv  dummy_statement.csv  sample_transactions.csv
fin_guard_ai/services/: __init__.py  excel_reader.py  (+1 more)
(+7 files in other folders)
