[project]
name = "agent-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server,mysql,sqlite]>=0.3.19",
    "fastmcp>=2.13.1",
    "google-adk>=1.19.0",
    "langchain>=1.1.0",
    "litellm>=1.80.10",
    "matplotlib>=3.10.7",
    "mcp[cli,server]>=1.22.0",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.4.0",
    "xlrd>=2.0.2",
]
